Pievienots Kārļa Immera projekts

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Kārlis Immers
+                                <a href="./karlis.immers/index.html" target="_blank">Kārlis Immers</a>
                             </td>
                         </tr>
                     </tbody>
