Pievienots Viktora Lačinova projets

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                 <td>Oskars Kracis</td>
               </tr>
               <tr>
-                <td>Viktors Lačinovs</td>
+                <td>
+                  <a href="https://depuresu.net/" target="_blank">Viktors Lačinovs</a>
+                </td>
               </tr>
               <tr>
                 <td>Alfrēds Mačtams</td>
