Pievienots Dāvida Adamoviča projekts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <table class="table table-sm table-striped table-hover mb-5">
             <tbody>
               <tr>
-                <td>Dāvids Adamovičs</td>
+                <td>
+                  <a href="./s23adamdavi/index.html" target="_blank">Dāvids Adamovičs</a>
+                </td>
               </tr>
               <tr>
                 <td>Mārtiņš Auziņš</td>
