pievienots Māra Dukaļska projekts

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <td>Rihards Brencēns</td>
               </tr>
               <tr>
-                <td>Māris Dukaļskis</td>
+                <td><a href="./s23dukamari/index.html" target="_blank">Māris Dukaļskis</td>
               </tr>
               <tr>
                 <td>Alekss Grečuhins</td>
