--- a/index.html
+++ b/index.html
@@ -1,125 +1,164 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="lv">
-  <head>
-    <meta charset="utf-8" />
-    <title>1. Praktiskais darbs</title>
-    <meta name="description" content="Ventspils Augstskolas 2024. gada pavasara semestra HTML + CSS praktiskie darbi" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body>
+<head>
+    <meta charset="utf-8">
+    <title>1. Praktiskais darbs</title>
+    <meta name="description" content="Ventspils Augstskolas 2024. gada pavasara semestra HTML + CSS praktiskie darbi">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+
     <div class="bg-light mb-4 py-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <header class="navbar bg-light">
-              <span class="navbar-brand mb-0 h1">HTML + CSS</span>
-            </header>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <header class="navbar bg-light">
+                        <span class="navbar-brand mb-0 h1">HTML + CSS</span>
+                    </header>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+
+
 
     <div class="container mb-4">
-      <div class="row">
-        <main class="col-md-6 offset-md-3">
-          <h1>1. Praktiskais darbs</h1>
+        <div class="row">
+            <main class="col-md-6 offset-md-3">
 
-          <p class="lead">Ventspils Augstskolas 2024. gada pavasara semestra HTML + CSS praktiskie darbi</p>
+                <h1>1. Praktiskais darbs</h1>
 
-          <table class="table table-sm table-striped table-hover mb-5">
-            <tbody>
-              <tr>
-                <td>
-                  <a href="./s23adamdavi/index.html" target="_blank">Dāvids Adamovičs</a>
-                </td>
-              </tr>
-              <tr>
-                <td>Mārtiņš Auziņš</td>
-              </tr>
-              <tr>
-                <td>Iļja Avlass</td>
-              </tr>
-              <tr>
-                <td>Kārlis Bērziņš</td>
-              </tr>
-              <tr>
-                <td>Markuss Blumbergs</td>
-              </tr>
-              <tr>
-                <td>Rihards Brencēns</td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="./s23dukamari/index.html" target="_blank">Māris Dukaļskis</a>
-                </td>
-              </tr>
-              <tr>
-                <td>Alekss Grečuhins</td>
-              </tr>
-              <tr>
-                <td>Madars Irbe</td>
-              </tr>
-              <tr>
-                <td>Ģirts Jencis</td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="./s23kairlaur_2/index.html" target="_blank">Lauris Kairo</a>
-                </td>
-              </tr>
-              <tr>
-                <td>Andžejs Kauškals</td>
-              </tr>
-              <tr>
-                <td>Oskars Kracis</td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="https://depuresu.net/" target="_blank">Viktors Lačinovs</a>
-                </td>
-              </tr>
-              <tr>
-                <td>Alfrēds Mačtams</td>
-              </tr>
-              <tr>
-                <td>Annija Stateviča</td>
-              </tr>
-              <tr>
-                <td>Valērija Šatrava</td>
-              </tr>
-              <tr>
-                <td>Adīna Tinine</td>
-              </tr>
-              <tr>
-                <td>Oskars Valters</td>
-              </tr>
-              <tr>
-                <td>Mārtiņš Žaimis</td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="./karlis.immers/index.html" target="_blank">Kārlis Immers</a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </main>
-      </div>
+                <p class="lead">Ventspils Augstskolas 2024. gada pavasara semestra HTML + CSS praktiskie darbi</p>
+
+                <table class="table table-sm table-striped table-hover mb-5">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a href="./s23adamdavi/index.html" target="_blank">Dāvids Adamovičs</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Mārtiņš Auziņš
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Iļja Avlass
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Kārlis Bērziņš
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Markuss Blumbergs
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Rihards Brencēns
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="./s23dukamari/index.html" target="_blank">Māris Dukaļskis</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Alekss Grečuhins
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Madars Irbe
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Ģirts Jencis
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="./s23kairlaur_2/index.html" target="_blank">Lauris Kairo</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Andžejs Kauškals
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Oskars Kracis
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://depuresu.net/" target="_blank">Viktors Lačinovs</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Alfrēds Mačtams
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Annija Stateviča
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Valērija Šatrava
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Adīna Tinine
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Oskars Valters
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Mārtiņš Žaimis
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="./karlis.immers/index.html" target="_blank">Kārlis Immers</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </main>
+        </div>
     </div>
+
+
 
     <div class="bg-secondary text-white py-4 mt-4">
-      <div class="container">
-        <div class="row">
-          <footer class="col-md-6 offset-md-3">Ventspils Augstskola, 2024</footer>
+        <div class="container">
+            <div class="row">
+                <footer class="col-md-6 offset-md-3">
+                    Ventspils Augstskola, 2024
+                </footer>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+
+</body>
+
 </html>
