--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <tr>
                             <td>
                                 Kārlis Bērziņš
+                                <a href="./s23berzkarl/index.html" target="_blank">Kārlis Bērziņš</a>
                             </td>
                         </tr>
                         <tr>
