Pievienots Aleksa 1. darbs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Alekss Grečuhins
+                                <a href="./s23GrecAlek/index.html" target="_blank">Alekss Grečuhins</a>
                             </td>
                         </tr>
                         <tr>
