--- a/s23berzkarl/index.html
+++ b/s23berzkarl/index.html
@@ -170,6 +170,6 @@ A native to the North Blue, Sanji grew up as part of the Vinsmoke family under h
  <p>&euro; 0.00 </p>
  <p>&#128540; </p>
  </footer>
-
+<!-- kājene  beigas -->
  </body>
 </html>
