--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="./s23adamdavi/index.html" target="_blank">Dāvids Adamovičs</a>
+                                Dāvids Adamovičs
                             </td>
                         </tr>
                         <tr>
@@ -53,7 +53,6 @@
                         <tr>
                             <td>
                                 Kārlis Bērziņš
-                                <a href="./s23berzkarl/index.html" target="_blank">Kārlis Bērziņš</a>
                             </td>
                         </tr>
                         <tr>
@@ -68,7 +67,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="./s23dukamari/index.html" target="_blank">Māris Dukaļskis</a>
+                                Māris Dukaļskis
                             </td>
                         </tr>
                         <tr>
@@ -88,7 +87,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="./s23kairlaur_2/index.html" target="_blank">Lauris Kairo</a>
+                                Lauris Kairo
                             </td>
                         </tr>
                         <tr>
@@ -103,7 +102,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="https://depuresu.net/" target="_blank">Viktors Lačinovs</a>
+                                Viktors Lačinovs
                             </td>
                         </tr>
                         <tr>
