Reapply "Merge branch 'BAARDA01-s23berzkarl'"
This reverts commit 8fd2c6e61b4257b44e914cd4caa8ada9fb3b49f2.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                Dāvids Adamovičs
+                                <a href="./s23adamdavi/index.html" target="_blank">Dāvids Adamovičs</a>
                             </td>
                         </tr>
                         <tr>
@@ -53,6 +53,7 @@
                         <tr>
                             <td>
                                 Kārlis Bērziņš
+                                <a href="./s23berzkarl/index.html" target="_blank">Kārlis Bērziņš</a>
                             </td>
                         </tr>
                         <tr>
@@ -67,7 +68,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Māris Dukaļskis
+                                <a href="./s23dukamari/index.html" target="_blank">Māris Dukaļskis</a>
                             </td>
                         </tr>
                         <tr>
@@ -87,7 +88,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Lauris Kairo
+                                <a href="./s23kairlaur_2/index.html" target="_blank">Lauris Kairo</a>
                             </td>
                         </tr>
                         <tr>
@@ -102,7 +103,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Viktors Lačinovs
+                                <a href="https://depuresu.net/" target="_blank">Viktors Lačinovs</a>
                             </td>
                         </tr>
                         <tr>
