--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Kārlis Bērziņš
+                                <a href="./s23berzkarl/index.html" target="_blank">Kārlis Bērziņš</a>
                             </td>
                         </tr>
                         <tr>
