Pievienots Oskara Valtera projekts.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Oskars Valters
+                                <a href="./s23valtoska/index.html" target="_blank">Oskars Valters</a>
                             </td>
                         </tr>
                         <tr>
