papildina studentu sarakstu

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Iļja Avlass
+                                <a href="./s23avlailja/index.html" target="_blank">Iļja Avlass</a>
                             </td>
                         </tr>
                         <tr>
