Pievienots Annijas Statevičas projekts

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Annija Stateviča
+                                <a href="./s23statanni/index.html" target="_blank">Annija Stateviča</a>
                             </td>
                         </tr>
                         <tr>
