--- a/s23GrecAlek/index.html
+++ b/s23GrecAlek/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>1.Praktiskais Darbs</title>
   <meta name="description" content="Aleksa Grečuhina 1. praktiskais darbs tīmekļa tehnoloģijās.">
-  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="styles.css">
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -22,7 +22,6 @@
 <header>
     
     <div class="container">
-
     <p class="lead">1. Praktiskais Darbs</p>
     <p class="sub">Ventspils Augstskola</p>
 </div>
@@ -69,7 +68,7 @@
     <h1>Family Guy</h1>
 
     <figure>
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/aa/Family_Guy_Logo.svg" alt="Simpsonu ģimene">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Family_Guy_Logo.svg" alt="Simpsonu ģimene">
     <figcaption>Family Guy Logo</figcaption>
 
 </figure>
