Pabeigts_darbs_Srifts-salabots

--- a/s23berzkarl/index.html
+++ b/s23berzkarl/index.html
@@ -10,12 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
  </head>
-  <style>
-    img {
-      width: auto;
-      height: auto;
-    }
-  </style>
+  
  <body>
  <!-- galvene -->
  
@@ -55,8 +50,9 @@
  </nav>
  <!-- saturs -->
 
- <main class="container">
-
+ <main>
+	<div class="container">
+		<div class="flexbox-columns">
 
   <article>
  <h1>One Piece</h1>
@@ -127,9 +123,11 @@ Oda revealed that he originally planned One Piece to last five years, and that h
  </tr>
  </table>
 </aside>
-<section>
-<h3>Galvenie varoņi</h3>
+</div>
 
+<section class="related-panel">
+<h3>Galvenie varoņi</h3>
+<div class="related-container">
 <h3>Monkey D. Luffy</h3>
 <img src="https://upload.wikimedia.org/wikipedia/en/c/cb/Monkey_D_Luffy.png" alt="Luffy">
 <p>Monkey D. Luffy (/ˈluːfi/ LOO-fee) (Japanese: モンキー・D・ルフィ, Hepburn: Monkī Dī Rufi, [ɾɯɸiː]), also known as "Straw Hat" Luffy[n 2], is a fictional character and the protagonist in the Japanese manga series One Piece created by Eiichiro Oda. Luffy made his debut as a young boy who acquires the properties of rubber after accidentally eating one of the Devil Fruits that belonged to "Red Hair" Shanks.
@@ -151,10 +149,10 @@ Luffy appears in most of the episodes, films, television specials, and OVAs of t
 
 A native to the North Blue, Sanji grew up as part of the Vinsmoke family under his father Vinsmoke Judge, king of the Germa Kingdom, and mother Vinsmoke Sora.[4] Living under a grueling father who only saw Sanji as a soldier, he escapes to Baratie where he learns to cook under “Red Leg” Zeff[5] and learns his fighting style, which is characterized by the use of legs in combat. Sanji is the fifth member and the fourth to join Monkey D. Luffy’s pirate crew as cook after the battle against Don Krieg. <p>
 
-
 </section>
-
+</div>
 </section>
+</div>
 </main>
  <!-- kājene -->
  
@@ -162,13 +160,14 @@ A native to the North Blue, Sanji grew up as part of the Vinsmoke family under h
  
  <div class="container">
 
-</div>
+
 
  
  <p>Kārlis Bērziņš, VeA, 2024</p>
  <p>&copy; Wikipedia </p>
  <p>&euro; 0.00 </p>
  <p>&#128540; </p>
+ </div>
  </footer>
 
  </body>
