Alfrēda Mačtama projekts

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Alfrēds Mačtams
+                                <a href="./s23mactalfr/index.html" target="_blank">Alfrēds Mačtams</a>
                             </td>
                         </tr>
                         <tr>
