Edited index file

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <td>Oskars Valters</td>
               </tr>
               <tr>
-                <td>Mārtiņš Žaimis</td>
+                <td>
+                  <a href="./s23zaimmart/index.html" target="_blank">Mārtiņš Žaimis</a>
+                </td>
               </tr>
               <tr>
                 <td>
