Pievienots Ģirta Jenča projekts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Ģirts Jencis
+                                <a href="./s23jencgirt/index.html" target="_blank">Ģirts Jencis</a>
                             </td>
                         </tr>
                         <tr>
