Andžejs Kauškals PD1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Andžejs Kauškals
+                                <a href="./s23kausandz/index.html" target="_blank">Andžejs Kauškals</a>
                             </td>
                         </tr>
                         <tr>
