--- a/s23kausandz/index.html
+++ b/s23kausandz/index.html
@@ -10,7 +10,7 @@
 	 
 	  <link rel="preconnect" href="https://fonts.googleapis.com">
 	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Jacquard+12&family=Nabla&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Nabla&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -49,7 +49,7 @@
 			<article>
 				<h1>Roņi</h1>
 				<figure>
-					<img src="https://i.imgur.com/ZHFqObv.jpeg" alt="Roņa attēls"">
+					<img src="https://i.imgur.com/ZHFqObv.jpeg" alt="Roņa attēls">
 					<figcaption>Ronis</figcaption>
 				</figure>
 				<p><b>Roņi</b> jeb lielās jūras desas <i>(Magnus maris farciminis)</i> ir sava veida suņu šķirne, 
@@ -93,7 +93,7 @@
 				<h4>¯\_(''3)_/¯ </h4>
 				<h2>Informatīvs video:</h2>
 				<iframe class="yt-video" width="560" height="315" src="https://www.youtube.com/embed/SuzKPqWFF80?si=Fqu_YfTVYI6m0VN1&amp;start=15" 
-				title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+				title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
 				gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</aside>
 		</div>
@@ -102,33 +102,33 @@
 				<div class="related-container">
 				<section class="related-panel">
 					<h3>Ziloņronis</h3>
-					<img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Male_elephant_seal.jpg" alt="ronis1"">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Male_elephant_seal.jpg" alt="ronis1">
 					<p>50% ronis, 50% zilonis</p>
 				</section>
 				<section class="related-panel">
 					<h3>Walrus</h3>
-					<img src="https://images.uesp.net/6/65/SR-creature-Horker.jpg" alt="ronis2"">
+					<img src="https://images.uesp.net/6/65/SR-creature-Horker.jpg" alt="ronis2">
 					<p>:^)</p>
 				</section>
 				<section class="related-panel">
 					<h3>Lauvronis</h3>
-					<img src="https://giffiles.alphacoders.com/780/7800.gif" alt="ronis3"">
-					<p>&#x1F4AB</p>
+					<img src="https://giffiles.alphacoders.com/780/7800.gif" alt="ronis3">
+					<p>&#x1F4AB;</p>
 				</section>
 				<section class="related-panel">
 					<h3>Seal</h3>
-					<img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Seal_2012_%28cropped%29.jpg" alt="ronis4"">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Seal_2012_%28cropped%29.jpg" alt="ronis4">
 					<p>Dziedātājs</p>
 				</section>
 				<section class="related-panel">
 					<h3>Mīļš ronis</h3>
-					<img src="https://i.imgur.com/orxRKWI.png" alt="ronis5"">
-					<p>&#x1F97A</p>
+					<img src="https://i.imgur.com/orxRKWI.png" alt="ronis5">
+					<p>&#x1F97A;</p>
 				</section>
 				<section class="related-panel">
 					<h3>Ausronis</h3>
-					<img src="https://inaturalist-open-data.s3.amazonaws.com/photos/17940763/large.jpg" alt="ronis6"">
-					<p>&#x26a0 NAV ĪSTS RONIS!! DZĒST!! &#x26a0</p>
+					<img src="https://inaturalist-open-data.s3.amazonaws.com/photos/17940763/large.jpg" alt="ronis6">
+					<p>&#x26a0; NAV ĪSTS RONIS!! DZĒST!! &#x26a0;</p>
 				</section>
 				</div>
 			</section>
