Pievienots Markuss Blumbergs

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Markuss Blumbergs
+                                <a href="./s22blummark/index.html" target="_blank">Markuss Blumbergs</a>
                             </td>
                         </tr>
                         <tr>
