--- a/s23valtoska/index.html
+++ b/s23valtoska/index.html
@@ -11,7 +11,7 @@
     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp:XROT,YROT@-45..45,-45..45&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     </head>
 
@@ -120,7 +120,7 @@
                             </div>
 
                             <script>
-                                const countDownDate = new Date("May 10, 2024 16:20:00").getTime();
+                                const countDownDate = new Date("May 10, 2025 16:20:00").getTime();
 
                                     function formatTimeLeft(time) {
                                         const days = Math.floor(time / (1000 * 60 * 60 * 24));
